z-index issue fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -893,6 +893,9 @@ button.next-cam:hover {
   left: 0;
   right: 0;
 }
+.showParticipantsPanel .active-speakers-wrap {
+  z-index: 2;
+}
 
 @media screen and (max-width: 1279px) {
   .all-MessageModule-wrap .message-item .system p.message-content {
